--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Outfit:wght@500;700&display=swap');
+:root {
+	--button-color: #548235;
+	--font: 'Outfit', sans-serif;
+}
+/* CONTAINER */
+
+/* END CONTAINER */
+/* Left CARD */
 .logo {
 	max-width: 4%;
 	background-size: cover;
 }
-h1 {
-	color: blue;
+.login-button {
+	background-color: var(--button-color);
 }
+.title {
+	font-family: var(--font);
+	font-size: 5rem;
+}
+/* END LEFT CARD */
