--- a/style.css
+++ b/style.css
@@ -4,7 +4,14 @@
 	--font: 'Outfit', sans-serif;
 }
 /* CONTAINER */
-
+* {
+	margin: 0 auto;
+}
+.container {
+	display: flex;
+	width: 100%;
+	height: 100vh;
+}
 /* END CONTAINER */
 /* Left CARD */
 .logo {
