--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 	margin: 0 auto;
 }
 .container {
+	overflow-y: hidden;
+	justify-content: space-between;
 	display: flex;
 	width: 100%;
 	height: 100vh;
@@ -26,3 +28,16 @@
 	font-size: 5rem;
 }
 /* END LEFT CARD */
+
+/* RIGHT CARD */
+.right-card {
+	margin: 0;
+}
+.right-img {
+	background-position: center;
+	background-size: cover;
+	background-attachment: fixed;
+	height: 100vh;
+	width: 100%;
+}
+/* END RIGHT CARD */
