--- a/style.css
+++ b/style.css
@@ -87,6 +87,11 @@ input {
 	font-weight: 600;
 	line-height: normal;
 	border: none;
+	transition: 0.5s ease-in-out;
+}
+.login-button:hover {
+	background: #63a13a;
+	color: #fff;
 }
 .description {
 	font-family: var(--font);
