--- a/style/homepage.css
+++ b/style/homepage.css
@@ -3,7 +3,11 @@
 	--button-color: #548235;
 	--font: 'Outfit', sans-serif;
 }
-
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
 .dropbtn {
 	background-color: #3498db;
 	color: white;
@@ -51,11 +55,38 @@
 	border-radius: 100%;
 	background-position: center;
 	background-size: cover;
-	width: 70%;
-	height: 20%;
+	width: 3rem;
+	height: 3rem;
 }
 
 .logo {
+	margin: 0;
 	max-width: 4%;
 	background-size: cover;
+	cursor: pointer;
+}
+
+ul li,
+a {
+	font-size: 1.1rem;
+	font-family: var(--font);
+	text-decoration: none;
+	list-style: none;
+	color: black;
+}
+.nav-links li {
+	display: inline-block;
+	padding: 0px 20px;
+}
+.nav-links li a {
+	transition: all 0.4s ease 0s;
+}
+.nav-links li a:hover {
+	color: var(--button-color);
+}
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 30px 10%;
 }
