--- a/style/homepage.css
+++ b/style/homepage.css
@@ -29,6 +29,7 @@
 
 .dropdown-content {
 	display: none;
+
 	position: absolute;
 	background-color: #f1f1f1;
 	min-width: 160px;
@@ -90,7 +91,7 @@ header {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	padding: 20px 8%;
+	padding: 20px 11%;
 	border-bottom: 1px solid black;
 }
 
@@ -98,6 +99,10 @@ header {
 
 /* SEARCH SECTION */
 .search-sec {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	background-image: url(../assets/search-section.png);
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -108,6 +113,7 @@ header {
 }
 
 .title-search {
+	margin-bottom: 1rem;
 	font-family: var(--font);
 	color: #fff;
 	font-family: Outfit;
@@ -123,4 +129,52 @@ header {
 	border-radius: 2.1875rem;
 	border: 4px solid #548235;
 	background: #d9d9d9;
+}
+input {
+	padding-left: 1rem;
+	margin-bottom: 7rem;
+	color: #000000;
+	font-family: Outfit;
+	font-size: 1.625rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	caret-color: transparent;
+}
+input::placeholder {
+	padding-left: 1rem;
+	color: #828282;
+	font-family: Outfit;
+	font-size: 1.325rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+/* BTN SEARCH */
+.btn-search {
+	display: none;
+	width: 5.5rem;
+	height: 4.75rem;
+	border-radius: 1rem;
+	background: #1e350f;
+	color: #fff;
+	text-align: center;
+	font-family: Outfit;
+	font-size: 1.2125rem;
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+	border: none;
+	transition: 0.5s ease-in-out;
+}
+.show-search {
+	display: inline-block;
+}
+/* BTN SEARCH */
+
+/* END SEARCH SECTION */
+.recipe-sec {
+	width: 100%;
+	height: 150vh;
 }
