--- a/style/homepage.css
+++ b/style/homepage.css
@@ -86,6 +86,9 @@ a {
 .nav-links li a:hover {
 	color: var(--button-color);
 }
+#in-page {
+	color: var(--button-color);
+}
 header {
 	width: 100%;
 	display: flex;
@@ -208,3 +211,42 @@ input::placeholder {
 	margin-left: 2rem;
 }
 /* END FOOTER SECTION */
+
+/* SAVED RECIPES SECTION */
+.banner-sec {
+	width: 100%;
+	padding: 20px 7%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.saved-recipe-title {
+	color: #9c9c9c8c;
+	font-family: Outfit;
+	font-size: 2.625rem;
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+}
+
+.back-saved-recipe {
+	color: #000;
+	font-family: Outfit;
+	font-size: 2.75rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+}
+.back-arrow-saved {
+	width: 2.1875rem;
+	height: 2.1875rem;
+	flex-shrink: 0;
+}
+.back-saved-recipe:hover {
+	color: var(--button-color);
+}
+.back-arrow-saved:hover {
+	stroke: var(--button-color);
+}
+/* SAVED RECIPES END */
