--- a/style/homepage.css
+++ b/style/homepage.css
@@ -261,3 +261,10 @@ input:focus {
 	height: 180vh;
 }
 /* SAVED RECIPE DATA END */
+
+/* CREATE RECIPE */
+.create-recipe-sec {
+	width: 100%;
+	height: 270vh;
+}
+/* CREATE RECIPE END */
