--- a/style/homepage.css
+++ b/style/homepage.css
@@ -8,7 +8,134 @@
 	margin: 0;
 	padding: 0;
 }
+.navbar {
+	width: 100%;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	padding: 20px 8%;
+	border-bottom: 1px solid black;
+	background-color: rgb(255, 255, 255);
+}
 
+.logo {
+	margin-right: auto;
+	max-width: 4%;
+	background-size: cover;
+	/* cursor: pointer; */
+}
+
+.brand-title {
+	font-size: 1.5rem;
+	margin: 0.5rem;
+}
+
+.navbar-links {
+	height: 100%;
+}
+
+.navbar-links ul {
+	display: flex;
+	margin: 0;
+	padding: 0;
+}
+
+.navbar-links li {
+	list-style: none;
+}
+
+.navbar-links li a {
+	margin-right: 1.2rem;
+	font-size: 1.1rem;
+	font-family: var(--font);
+	display: block;
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+	padding: 1rem;
+}
+
+.navbar-links a:hover {
+	color: var(--button-color);
+}
+
+.toggle-button {
+	position: absolute;
+	top: 0.75rem;
+	right: 1rem;
+	display: none;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 30px;
+	height: 21px;
+}
+
+.toggle-button .bar {
+	height: 3px;
+	width: 100%;
+	background-color: rgb(0, 0, 0);
+	border-radius: 10px;
+}
+
+.ham {
+	display: block;
+}
+
+.dropbtn {
+	background-color: #3498db;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+}
+
+.dropbtn:hover,
+.dropbtn:focus {
+	background-color: #2980b9;
+}
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	overflow: auto;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+.dropdown a:hover {
+	background-color: #ddd;
+}
+
+.show {
+	display: block;
+}
+.dropbtn {
+	background-image: url('https://i.pinimg.com/736x/22/d9/b7/22d9b702a49aedb04fb7cbdc446e8f2b.jpg');
+	border-radius: 100%;
+	background-position: center;
+	background-size: cover;
+	width: 3rem;
+	height: 3rem;
+}
+.dropdown a {
+	font-family: var(--font);
+}
+.dropdown a:hover {
+	color: rgb(0, 0, 0);
+}
 /* NAVBAR END */
 
 /* SEARCH SECTION */
@@ -212,5 +339,152 @@ input:hover {
 /*================QUERIES========= */
 
 /* NAVBAR */
-@media only screen and (max-width: 1320px) {
+@media (max-width: 800px) {
+	.logo,
+	.logo-footer {
+		max-width: 10%;
+	}
+
+	.toggle-button {
+		top: 1.5rem;
+		right: 1rem;
+	}
+	.navbar {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.toggle-button {
+		display: flex;
+	}
+
+	.navbar-links {
+		display: none;
+		align-self: center;
+		width: 100%;
+	}
+
+	.navbar-links ul {
+		width: 100%;
+		flex-direction: column;
+	}
+
+	.navbar-links ul li {
+		text-align: center;
+	}
+
+	.navbar-links ul li a {
+		margin: 0;
+		padding: 0;
+		padding: 0.5rem 1rem;
+	}
+
+	.navbar-links.active {
+		display: flex;
+	}
+	.dropdown {
+		align-self: center;
+		width: 10%;
+	}
+	.search {
+		width: 17.36144rem;
+		height: 2.9375rem;
+		/* margin-bottom: 12rem; */
+	}
+
+	input {
+		font-size: 1rem;
+		margin-bottom: 1rem;
+	}
+
+	.search-sec {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background-image: url(../assets/search-section.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center;
+		max-width: 100%;
+		height: 10.5rem;
+		background-color: var(--button-color);
+	}
+
+	.title-search {
+		margin-bottom: 0.5rem;
+		font-family: var(--font);
+		color: #fff;
+		font-family: Outfit;
+		font-size: 1.2rem;
+		font-style: normal;
+		font-weight: 500;
+		line-height: normal;
+		text-transform: capitalize;
+	}
+	.btn-search {
+		display: none;
+		width: 17.5rem;
+		height: 2.75rem;
+		/* border-radius: 1.3125rem; */
+		border-radius: 3.8125rem;
+		background-color: #63a13a;
+		color: #fff;
+		text-align: center;
+		font-family: Outfit;
+		font-size: 1rem;
+		font-style: normal;
+		font-weight: 600;
+		line-height: normal;
+		border: none;
+		transition: 0.3s ease-in-out;
+	}
+	input::placeholder {
+		font-size: 0.9rem;
+	}
+	.show-search {
+		display: block;
+	}
+	.btn-search:hover {
+		background: #bbd24e;
+	}
+
+	.saved-recipe-title {
+		color: #9c9c9c8c;
+		font-family: Outfit;
+		font-size: 1.625rem;
+		font-style: normal;
+		font-weight: 600;
+		line-height: normal;
+	}
+
+	.back-saved-recipe {
+		color: #000;
+		font-family: Outfit;
+		font-size: 1.75rem;
+		font-style: normal;
+		font-weight: 500;
+		line-height: normal;
+	}
+	.back-arrow-saved {
+		width: 1.1875rem;
+		height: 1.1875rem;
+		flex-shrink: 0;
+	}
+
+	.footer-sec {
+		height: 10vh;
+	}
+}
+
+@media (max-width: 780px) {
+	.logo {
+		max-width: 5%;
+	}
+}
+
+@media (max-width: 500px) {
+	.logo {
+		max-width: 10%;
+	}
 }
