--- a/style/homepage.css
+++ b/style/homepage.css
@@ -8,6 +8,9 @@
 	margin: 0;
 	padding: 0;
 }
+#in-page {
+	color: var(--button-color);
+}
 .navbar {
 	width: 100%;
 	display: flex;
@@ -307,36 +310,101 @@ input:hover {
 
 /* CREATE RECIPE */
 .create-recipe-sec {
-	width: 100%;
-	height: 270vh;
+	width: 90%;
+	height: 200vh;
+	margin-left: 6.5em;
+	margin-top: 3rem;
 }
-/* ============================================ */
-
-/* .type-input-section {
-	display: flex;
-} */
 
 .type-input-section input[type='radio'] {
 	display: none; /* Hide the default radio button */
+	caret-color: transparent;
+}
+#picture-dish {
+	font-size: 1rem;
 }
 
 .type-input-section label {
+	margin-top: 10px;
+	margin-bottom: 5rem;
+	text-align: center;
 	display: inline-block;
-	padding: 8px 12px;
-	margin-bottom: 5px;
+	padding: 10px 12px;
 	cursor: pointer;
 	border: 1px solid #ccc;
-	border-radius: 4px;
+	border-radius: 1.3125rem;
+	font-size: 1.2rem;
+	width: 10.75rem;
+	height: 3rem;
+	caret-color: transparent;
 }
 
 .type-input-section input[type='radio']:checked + label {
-	background-color: #e0e0e0; /* Change background color when checked */
+	background-color: var(
+		--button-color
+	); /* Change background color when checked */
 	border: 1px solid #333; /* Change border color when checked */
+	color: #ffffff;
+}
+.create-recipe-form {
+	margin-top: 3rem;
+	display: block;
+	margin-left: 6.5rem;
 }
 
+.title-dish {
+	width: 20.5rem;
+	height: 2.625rem;
+	border-radius: 0.5rem;
+	border: 2px solid var(--button-color);
+}
+label {
+	color: #000;
+	font-family: Outfit;
+	font-size: 1.5rem;
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+}
+
+.description-input-section,
+.steps-input-section {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+}
+
+.submit-cancel {
+	width: 50%;
+}
+
+.submit-cancel button {
+	color: #fff;
+	font-family: Outfit;
+	font-size: 1rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+	text-transform: capitalize;
+	background: var(--button-color);
+	width: 5.6875rem;
+	height: 2.375rem;
+}
+.submit-cancel button:nth-child(1) {
+	background: red;
+}
+
+textarea {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	text-align: start;
+	font-size: 1rem;
+	width: 57rem;
+	height: 14.3125rem;
+}
 /* CREATE RECIPE END */
 
-/*================QUERIES========= */
+/*================QUERIES============================================================================================== */
 
 /* NAVBAR */
 @media (max-width: 800px) {
@@ -475,16 +543,97 @@ input:hover {
 	.footer-sec {
 		height: 10vh;
 	}
+
+	/* CREATE RECIPE */
+	.create-recipe-sec form {
+		margin-left: 1rem;
+	}
+
+	.create-recipe-sec {
+		width: 100%;
+		margin: 0;
+	}
+
+	textarea {
+		width: 30rem;
+		height: 14.3125rem;
+	}
+
+	label {
+		font-size: 1rem;
+	}
+}
+
+@media (max-width: 1055px) {
+	textarea {
+		width: 35rem;
+		height: 10.3125rem;
+	}
 }
 
 @media (max-width: 780px) {
 	.logo {
 		max-width: 5%;
 	}
+
+	.create-recipe-sec {
+		width: 100%;
+		height: 100vh;
+		margin: 0;
+	}
+
+	textarea {
+		width: 20rem;
+		height: 10.3125rem;
+	}
+	.type-input-section {
+		margin-bottom: 10px;
+	}
+
+	.type-input-section label {
+		display: inline-block;
+		padding: 7px 12px;
+		font-size: 0.8rem;
+		width: 5.75rem;
+		height: 2rem;
+		margin-bottom: 10px;
+	}
+	#picture-dish {
+		font-size: 0.5rem;
+	}
+	.submit-cancel {
+		width: 100%;
+	}
 }
 
 @media (max-width: 500px) {
 	.logo {
 		max-width: 10%;
+	}
+	.create-recipe-sec {
+		width: 100%;
+		margin: 0;
+		margin-left: 0;
+	}
+	.type-input-section label {
+		display: inline-block;
+		padding: 2px 10px;
+		font-size: 0.5rem;
+		margin-right: 5px;
+		width: 4.5rem;
+		height: 1rem;
+	}
+	.title-dish {
+		width: 10.5rem;
+		height: 1.625rem;
+		border-radius: 0.5rem;
+		border: 2px solid var(--button-color);
+	}
+}
+
+@media (max-width: 450px) {
+	.create-recipe-sec {
+		width: 100%;
+		margin: 0;
 	}
 }
