--- a/style/homepage.css
+++ b/style/homepage.css
@@ -12,6 +12,7 @@
 #in-page {
 	color: var(--button-color);
 }
+
 .navbar {
 	width: 100%;
 	display: flex;
@@ -240,7 +241,7 @@ input:hover {
 	justify-content: center;
 	align-items: center;
 	align-self: center;
-	width: 100%;
+	/* width: 100%; */
 	height: auto;
 	margin: 20px 0;
 }
@@ -333,28 +334,6 @@ input:hover {
 	font-size: 1rem;
 }
 
-.type-input-section label {
-	margin-top: 10px;
-	margin-bottom: 5rem;
-	text-align: center;
-	display: inline-block;
-	padding: 10px 12px;
-	cursor: pointer;
-	border: 1px solid #ccc;
-	border-radius: 1.3125rem;
-	font-size: 1.2rem;
-	width: 10.75rem;
-	height: 3rem;
-	caret-color: transparent;
-}
-
-.type-input-section input[type='radio']:checked + label {
-	background-color: var(
-		--button-color
-	); /* Change background color when checked */
-	border: 1px solid #333; /* Change border color when checked */
-	color: #ffffff;
-}
 .create-recipe-form {
 	margin-top: 3rem;
 	display: block;
@@ -600,14 +579,6 @@ textarea {
 		margin-bottom: 10px;
 	}
 
-	.type-input-section label {
-		display: inline-block;
-		padding: 7px 12px;
-		font-size: 0.8rem;
-		width: 5.75rem;
-		height: 2rem;
-		margin-bottom: 10px;
-	}
 	#picture-dish {
 		font-size: 0.5rem;
 	}
@@ -624,8 +595,7 @@ textarea {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	gap: 50px;
-	max-width: 1200px;
-	margin: 0 auto;
+	max-width: 1500px;
 	overflow-y: hidden;
 }
 .recipe-child {
@@ -705,17 +675,21 @@ textarea {
 
 /* EACH RECIPES */
 
-.category {
-	background-color: blue;
-	padding: 0, 200px;
-	width: 100%;
-	display: flex;
-	justify-content: start;
-	align-items: center;
-}
 .rec-desc {
 	margin-top: 20px;
 	width: 80%;
+}
+
+.cat {
+	padding: 0, 200px;
+	width: 1090px;
+	height: 10vh;
+	display: flex;
+	justify-content: start;
+	font-size: 23px;
+	font-family: Outfit;
+	font-weight: 1000;
+	align-items: center;
 }
 
 .rec-table {
