--- a/style/homepage.css
+++ b/style/homepage.css
@@ -241,7 +241,7 @@ input:hover {
 	justify-content: center;
 	align-items: center;
 	align-self: center;
-	/* width: 100%; */
+
 	height: auto;
 	margin: 20px 0;
 }
@@ -340,12 +340,18 @@ input:hover {
 	margin-left: 6.5rem;
 }
 
+#category {
+	font-size: 2rem;
+}
+
 .title-dish {
-	width: 20.5rem;
+	font-size: 1.5rem;
+	width: 10.5rem;
 	height: 2.625rem;
 	border-radius: 0.5rem;
 	border: 2px solid var(--button-color);
 }
+
 label {
 	color: #000;
 	font-family: Outfit;
@@ -612,7 +618,7 @@ textarea {
 .recipe-item {
 	overflow-y: hidden;
 	box-sizing: border-box;
-	width: 250px; /* Fixed width for each recipe item */
+	width: 550px; /* Fixed width for each recipe item */
 	height: 230px; /* Fixed height for each recipe item */
 	padding: 15px;
 	border: 1px solid #ddd;
@@ -626,6 +632,12 @@ textarea {
 	color: #333;
 	transition: box-shadow 0.3s ease;
 	overflow: hidden; /* Ensure images don't overflow their container */
+}
+
+#category-rec {
+	color: #e9e9e9;
+	font-size: 10px;
+	font-weight: 200;
 }
 
 .recipe-item:hover {
