Added a saved recipe feature and style it

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -241,7 +241,6 @@ input:hover {
 	justify-content: center;
 	align-items: center;
 	align-self: center;
-
 	height: auto;
 	margin: 20px 0;
 }
@@ -251,7 +250,6 @@ input:hover {
 /* FOOTER SECTION */
 .footer-sec {
 	display: flex;
-
 	align-items: center;
 	justify-content: flex-start;
 	background-image: url(../assets/footer-img.png);
@@ -344,10 +342,11 @@ input:hover {
 	font-size: 2rem;
 }
 
+/* //BULLSHIT */
 .title-dish {
 	font-size: 1.5rem;
-	width: 10.5rem;
-	height: 2.625rem;
+	width: 20.5rem;
+	height: 20.625rem;
 	border-radius: 0.5rem;
 	border: 2px solid var(--button-color);
 }
@@ -618,7 +617,7 @@ textarea {
 .recipe-item {
 	overflow-y: hidden;
 	box-sizing: border-box;
-	width: 550px; /* Fixed width for each recipe item */
+	width: 250px; /* Fixed width for each recipe item */
 	height: 230px; /* Fixed height for each recipe item */
 	padding: 15px;
 	border: 1px solid #ddd;
